--- a/client/src/assets/css/styles.css
+++ b/client/src/assets/css/styles.css
@@ -1,15 +1,5 @@
 @charset "UTF-8";
-/*!
-* Start Bootstrap - Freelancer v6.0.5 (https://startbootstrap.com/theme/freelancer)
-* Copyright 2013-2020 Start Bootstrap
-* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-freelancer/blob/master/LICENSE)
-*/
-/*!
- * Bootstrap v4.5.3 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -4814,50 +4804,15 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: inherit;
 }
 
-.alert-link {
-  font-weight: 700;
-}
-
-.alert-dismissible {
-  padding-right: 4rem;
-}
-.alert-dismissible .close {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
-  padding: 0.75rem 1.25rem;
-  color: inherit;
-}
-
-.alert-primary {
-  color: #0e6251;
-  background-color: #d1f2eb;
-  border-color: #bfece3;
-}
-.alert-primary hr {
-  border-top-color: #abe6da;
-}
-.alert-primary .alert-link {
-  color: #08352c;
-}
-
-.alert-secondary {
-  color: #17202a;
-  background-color: #d5d8dc;
-  border-color: #c4c9ce;
-}
-.alert-secondary hr {
-  border-top-color: #b6bcc2;
-}
-.alert-secondary .alert-link {
-  color: #050709;
-}
-
 .alert-success {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  margin-bottom: 0;
   color: #155724;
   background-color: #d4edda;
   border-color: #c3e6cb;
+  text-align: center;
 }
 .alert-success hr {
   border-top-color: #b1dfbb;
@@ -4866,64 +4821,21 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #0b2e13;
 }
 
-.alert-info {
-  color: #0c5460;
-  background-color: #d1ecf1;
-  border-color: #bee5eb;
-}
-.alert-info hr {
-  border-top-color: #abdde5;
-}
-.alert-info .alert-link {
-  color: #062c33;
-}
-
-.alert-warning {
-  color: #856404;
-  background-color: #fff3cd;
-  border-color: #ffeeba;
-}
-.alert-warning hr {
-  border-top-color: #ffe8a1;
-}
-.alert-warning .alert-link {
-  color: #533f03;
-}
-
 .alert-danger {
+  position: absolute;
+  width: 100%;
+  left: 0;
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
+  margin-bottom: 0;
+  text-align: center;
 }
 .alert-danger hr {
   border-top-color: #f1b0b7;
 }
 .alert-danger .alert-link {
   color: #491217;
-}
-
-.alert-light {
-  color: #818182;
-  background-color: #fefefe;
-  border-color: #fdfdfe;
-}
-.alert-light hr {
-  border-top-color: #ececf6;
-}
-.alert-light .alert-link {
-  color: #686868;
-}
-
-.alert-dark {
-  color: #1b1e21;
-  background-color: #d6d8d9;
-  border-color: #c6c8ca;
-}
-.alert-dark hr {
-  border-top-color: #b9bbbe;
-}
-.alert-dark .alert-link {
-  color: #040505;
 }
 
 @-webkit-keyframes progress-bar-stripes {
@@ -10079,6 +9991,9 @@ h3 {
   font-size: 80%;
   padding: 0.8rem;
 }
+#mainNav .navbar-toggler span {
+  margin-right: 3px;
+}
 
 @media (min-width: 992px) {
   #mainNav {
@@ -10228,7 +10143,14 @@ form .row:first-child .floating-label-form-group {
   border-top: 1px solid #e9ecef;
 }
 
+.letter-count {
+  position: absolute;
+  right: 0;
+  bottom: -25px;
+}
+
 .footer {
+  position: relative;
   padding-top: 5rem;
   padding-bottom: 5rem;
   background-color: #2c3e50;
@@ -10236,5 +10158,26 @@ form .row:first-child .floating-label-form-group {
 }
 
 .copyright {
+  position: absolute;
+  bottom: 0;
+  padding: 1rem 0;
+  width: 100%;
   background-color: #1a252f;
+}
+
+@keyframes AlertAnimation {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.fadeOut {
+  opacity: 1;
+  visibility: visible;
+  animation: AlertAnimation 2s ease-in-out .5s forwards;
 }
